Fix api call (#141)
* Fix form for correct api call

* Fixed Feedback button cut off

* Remove unused component

* Better right alignment for Feedback

--- a/web/frontend/src/components/components.module.css
+++ b/web/frontend/src/components/components.module.css
@@ -74,7 +74,7 @@
 .FeedbackButtonDiv{
     position:absolute;
     top:50%;
-    right:-1%;
-    height:10%;
+    right: 0;
+    transform-origin: right top;
     transform: rotate(90deg);
 }
